--- a/style.css
+++ b/style.css
@@ -4,24 +4,36 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
 
+a   {text-decoration: none; color: white}
+    
 h1  {        
     color: red;
     font-size: 20px;
-    text-align: center;
+    align-items: center;
     }
-
+body a{
+    color: rgb(255, 255, 255);
+}
 .ulSection1  {
-    background-color: #2C3E50;
     display:flex;
     justify-content: space-around;
-    color: white;
+    align-items: center;
     background-color: rgba(105, 218, 218, 0.493);
     list-style: none;
     padding: 20px 0 20px 0;
 }
-
-ul {
+.ulSection1 img{
+    width: 4rem;
+}
+body nav{
+    background-color: rgb(142, 190, 174);
+    padding-top: 4%;
+    padding-bottom: 4%;
+}
+.ul1 {
     display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .menu {
@@ -35,6 +47,54 @@ nav ul {
     display: flex;
 
 }
+
+.TestimonyH2 {
+    border-radius: 4px;
+    margin: 0 30% 0 30%;
+    background-color: rgb(253, 68, 62);
+    color: white;
+    padding: 10px 0 10px 0;
+}
+
+.TestimonyAndres img {
+    height: 50px;
+    width: 50px;
+    border-radius: 100%;
+    margin: 0 0 0 0;
+}
+
+.TestimonyAndres {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+
+nav h2 {
+    text-align: center;
+}
+
+.Social_Media {
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 0 0 0;
+}
+
+.Social_Media img {
+    height: 50px;
+    width: 50px;
+}
+
+footer h2 {
+    color: white;
+}
+
+
+
+
+
+
+
 
 /* dimas
 header{
@@ -69,35 +129,58 @@ nav ul li a:hover {
 
 
 */
+main > * {
+    margin-bottom: 30px;
+}
 
-/*Alejo
+main {
+    min-height: 30rem;
+}
 
-main{
-    background-color: aquamarine;
+main h2{
+    text-align: center;
 }
 .somos{
-    color: red;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     font-size: 2rem;
 }
 .logo{
-    width: 2rem;
-    height: 2rem;
+    width: 8rem;
+    display: flex;
+    margin: 0 auto;
+}
+
+main h3{
     text-align: center;
 }
-.social{
+.refe{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    background-color: rgb(197, 252, 190);
+    padding: 20px 0 20px 0;
 }
 main div img{
     width: 5rem;
 }
-
-footer img{
-    width: 2rem;
+.congrat{
+    text-align: center;
+    /*font-family: ;*/
+    margin:20px auto;
+    max-width:80%;
+    padding: 15px 0 15px 0;
+    border-radius: 5px;
+    border: 1px solid black;
+    background-color: #eceaea;
+    box-shadow: 0px 4px 8px rgb(37, 37, 37);
 }
 
-*/
+.congrat p {
+    align-items: center;
+    align-self: center;
+    margin-bottom: 10px;
+}
+
+/* SEO CSS */
+
+
