--- a/style.css
+++ b/style.css
@@ -7,13 +7,22 @@
 a   {text-decoration: none; color: white}
     
 h1  {        
-    color: red;
-    font-size: 20px;
+    color: rgb(46, 8, 77);
+    font-size: 25px;
     align-items: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
+
+
 body a{
     color: rgb(255, 255, 255);
 }
+
+a:hover{
+    font-weight: bold;
+
+}
+
 .ulSection1  {
     display:flex;
     justify-content: space-around;
@@ -22,6 +31,7 @@ body a{
     list-style: none;
     padding: 20px 0 20px 0;
 }
+
 .ulSection1 img{
     width: 4rem;
 }
